  * Updated the install documentation to recommend pip
  * Added a 4-tap + Hanning windowed polyphase filter bank to the various functions in lsl.correlator.fx
  * Added an option to use the new PFB in correlateTBN and correlateTBW
  * Added an option to use the new PFB in drxSpectra, tbnSpectra, and tbwSpectra

1.2.4
  * Fixed a bug in driftcurve.py that put a cos(decliation) correction into the LFSM runs
  * Updated the documentation to reflect that unittest2 is now required as of 1.2.2 for Python 2.6 support
  * Added argparse as an extra dependency for Python 2.6
  * Moved the scripts that ship with LSL to argparse for command line parsing
  * Added a new lsl.misc.parser module to help with the switch over to argparse
  * Updated the minimum PyEphem version of 3.5.7.3
  * Fixed a bug in lsl.misc.ionosphere that causes some UQR files to fail to parse
  * Updated the URL/filename structure used to download the CODE files in lsl.misc.ionosphere
  * Added support for MCS MIBs stored as .gdb files
  * Added support for writing comments and history to FITS-IDI, SDFITS, and UVFITS files
  * Changed the lsl.reader.ldp.DRXFile class to deal with small (<50 frame) gaps in DRX files
  * Changed the lsl.reader.cor module to ensure the YX is valid for the autocorrelations
  * Worked on reduced the memory usage of the FITS-IDI writer
  * Adjusted the TBW duration calculation to reflect that DP can output TBW twice as fast now
  * Changed the lsl.common.sdf and lsl.common.sdfADF to allow "flat" Projects and Sessions
  * Fixed a problem triggering auto-copy in SDFs when not session comments are provided
  * Fixed a problem in some of the lsl.writer modules that caused duplicate entries to end up in SOURCE tables
  * Added support for interferometer definition files (IDFs)

1.2.3
  * Fixed a problem with the conditional dependencies in setup.py for older versions of setuptools